--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2",
     "@truffle/hdwallet-provider": "2.0.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "date-fns": "^2.28.0",
     "dotenv": "^14.3.2",
-    "mocha": "^9.2.0"
+    "mocha": "^9.2.0",
+    "@openzeppelin/contracts": "^3.4.0-solc-0.7"
   },
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.10",
