--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
     "chai-as-promised": "^7.1.1",
     "date-fns": "^2.28.0",
     "dotenv": "^14.3.2",
-    "mocha": "^9.2.0",
-    "@openzeppelin/contracts": "^3.4.0-solc-0.7"
+    "mocha": "^9.2.0"
   },
   "devDependencies": {
-    "@openzeppelin/test-helpers": "^0.5.10",
     "eth-gas-reporter": "^0.2.22"
   },
   "scripts": {
