--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "dependencies": {
+    "@openzeppelin/contracts": "^4.4.2",
     "@truffle/hdwallet-provider": "2.0.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "date-fns": "^2.28.0",
     "dotenv": "^14.3.2",
-    "mocha": "^9.2.0"
+    "ganache-cli": "^6.12.2",
+    "mocha": "^9.2.0",
+    "truffle": "^5.4.33"
   },
   "devDependencies": {
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/v3-sdk": "^3.8.2",
     "eth-gas-reporter": "^0.2.22"
   },
   "scripts": {
