--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "dependencies": {
     "@truffle/hdwallet-provider": "2.0.1",
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "date-fns": "^2.28.0",
-    "dotenv": "^14.3.2",
-    "mocha": "^9.2.0"
+    "@openzeppelin/contracts": "^4.3.2"
   },
   "devDependencies": {
-    "eth-gas-reporter": "^0.2.22"
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "bn.js": "^5.2.0"
   },
   "scripts": {
     "build": "scripts/build.js"
