Test Aave Implementation

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ethers": "^5.5.4",
+    "jsbi": "^3.2.5",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-scripts": "4.0.3",
@@ -28,5 +30,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.21",
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/v3-sdk": "^3.8.2",
+    "tslib": "^2.3.1"
   }
 }
